Added Final Fixes and Changes

--- a/src/config/agents.yaml
+++ b/src/config/agents.yaml
@@ -39,14 +39,14 @@ obsidian_mcp_agent:
     You know how to use tags effectively and create backlinks that make knowledge discoverable.
     Your organized vaults help users find information quickly and see connections they might have missed.
 
-reviewer_agent:
-  role: >
-    Quality Assurance Editor
-  goal: >
-    Review research documents for accuracy, clarity, formatting consistency, and overall quality
-    before final integration into the knowledge base
-  backstory: >
-    You are a meticulous editor with a keen eye for detail. You ensure that all research
-    is accurate, well-written, and properly formatted. You check for logical flow,
-    consistency in terminology, proper citations, and adherence to documentation standards.
-    Your reviews catch errors and improve the overall quality of the knowledge base.
+# reviewer_agent:
+#   role: >
+#     Quality Assurance Editor
+#   goal: >
+#     Review research documents for accuracy, clarity, formatting consistency, and overall quality
+#     before final integration into the knowledge base
+#   backstory: >
+#     You are a meticulous editor with a keen eye for detail. You ensure that all research
+#     is accurate, well-written, and properly formatted. You check for logical flow,
+#     consistency in terminology, proper citations, and adherence to documentation standards.
+#     Your reviews catch errors and improve the overall quality of the knowledge base.
